--- a/Hub-Control/HC-Frontend-v2/package.json
+++ b/Hub-Control/HC-Frontend-v2/package.json
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.11.2",
+    "@stomp/stompjs": "^7.2.1",
     "axios": "^1.13.3",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.13.0",
-    "recharts": "^3.7.0"
+    "recharts": "^3.7.0",
+    "sockjs-client": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
